version/0.12/_sources/api/solver/_autosummary/settings/scene.rst.txt
:orphan:

.. _scene:

scene
=====

.. currentmodule:: ansys.fluent.core.solver.settings_231.scene

.. autoclass:: scene
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

========================================   =============================================

Command                                                                          Summary

========================================   =============================================
:ref:`display <display_1>`                                      Display graphics object.

:ref:`copy <copy_3>`                                               Copy graphics object.

:ref:`add_to_graphics <add_to_graphics>`       Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                               Clear object history.

========================================   =============================================

.. rubric:: Named object type

:ref:`scene_child <scene_child>`


.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`results <results>`       'results' child.

========================   ====================

